--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,62 @@
     box-sizing: border-box;
 }
 
+html {
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Open Sans', sans-serif;
+}
+
+body {
+    height: 100vh;
+    width: 100%;
+    background-image: linear-gradient(#249687 0px,#249687 15vh,#DADBD4 15vh, #DADBD4 100%);
+    display: flex;
+    overflow: hidden;
+}
+
+.container {
+    margin: auto;
+    width: 80%;
+    height: 95%;
+    display: flex;
+}
+
+.col-left {
+    width: 40%;
+}
+
+.col-left-top {
+    height: 80px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.user-cont {
+    height: 80px;
+    display: flex;
+    align-items: center;
+}
+
+.user-cont img {
+    height: 60px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.user-cont h3 {
+    font-size: 0.9em;
+    padding-left: 0.5em;
+    cursor: pointer;
+}
+
+.icon-container {
+    display: flex;
+    align-items: center;
+}
+
+.icon-container i {
+    color: #B1B1B1;
+    padding-right: 1em;
+    font-size: 1.3em;
+    cursor: pointer;
+}
